# fys5429

./: .gitignore  README.md
project_1/: README.md  autoencoder.py  cnn.py  data_pipeline.py  feedforward.py  main.py  perm.py  plot.py  r2.csv  start_xterms.sh  train.py
project_1/data/: main.cpp
project_1/scraped code/: CMakeLists.txt  main
project_1/utils/: plot_activation_functions.py
project_2/: README.md  config.yaml  data_loader.py  main.py  plot.py  plot_predictions.py  plot_similarity.py  train.py
project_2/configs/: all_convnext.yaml  all_models.yaml  all_vits.yaml  conv_res.yaml  conv_res_vit.yaml  convnextsmall_gradient_clip_test.yaml  dataaugmentation_test.yaml  diff_num_datapoints.yaml  group_test.yaml  more_vits.yaml  resnet101.yaml  resnet50.yaml  resnet50_vs_resnet50v2.yaml  resnet_vs_vit.yaml  rotation_test.yaml  slurm_all_models.sh  slurm_convnext_diffnum.sh  slurm_convnextsmall_dataaug.sh  slurm_vit_diffnum.sh  slurm_vit_s16_dataaug.sh  vit_b16.yaml  vit_s16_dataaugmentation_test.yaml  vit_s16_t16_diff_num_datapoints.yaml
project_2/configs/long_jobs/: make_all_models_run.py  make_dataaug_run.py  make_datapoints_run.py  make_diff_epochs.py  make_extra_long.py
project_2/data/: README.md  convert_to_npz.py  data_pipeline_2.py  patch_demo.py  plot_k.py  simulation_demo.py
project_2/models/: README.md  bestnet.py  cnn.py  convnext.py  graczyk.py  resnet.py  simplenet.py  toy_mae.py  vit.py
project_2/plots/: demp_r2.py  plot.py
project_2/results_2/: plot_dataaug.py  plot_diff_num_datapoints.py  plot_extralong.py  plot_full_training.py
(+56 files in other folders)
